Fixed navbar expand/collapse issues and enabled collapse on select

--- a/src/App.css
+++ b/src/App.css
@@ -42,8 +42,6 @@
 #nav {
   background: black;
   opacity: 90%;
-  position: sticky;
-  width: 100%;
 }
 
 #header-text {
